Java 21でdeprecatedになったnew URL()まわりを書き換える